--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm update caniuse-lite browserslist
       - name: Build React App
         run: CI=false npm run build
-     - name: Install SURGE
-       run: npm i -g surge
+      - name: Install SURGE
+        run: npm install -g surge
 
-     - name: Upload site
+      - name: Upload site
