--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,12 @@ jobs:
         uses: actions/setup-node@v2-beta
         with:
           node-version: 12
-      - run: npm install
-      - name: Update caniuse-lite browserslist
-        run: npm update caniuse-lite browserslist
+      - name: Prepare for Yarn Installation
+        run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+      - name: install yarn
+        run: sudo apt update && sudo apt install yarn
       - name: Build React App
-        run: CI=false npm run build
+        run: yarn build
       - name: Install SURGE
         run: npm install -g surge
 
